results/6018f6892df58ad3b3640b2bc5c2473c/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper({fitarraystring}, emcee, m,C, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 6018f6892df58ad3b3640b2bc5c2473c, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
